# cats_and_dogs_bot

./: README.md  pyproject.toml
cats_and_dogs_bot/: main.py
