[tool.poetry]
name = "cats-and-dogs-bot"
version = "0.1.0"
description = ""
authors = ["kachus <ka4usova.e@gmail.com>"]
readme = "README.md"
packages = [{include = "cats_and_dogs_bot"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
